# Personal-Medication-Management-App-Full-Stack-Project

./: CONTRIBUTING.md  README.md
project/backend/: .gitignore  Dockerfile  README.md  TASKS.md  Untitled.ipynb  docker-compose.yml  entrypoint.sh  py_vapid_service.py  pyproject.toml  req.txt  requirements.latest.dev.txt  requirements.latest.txt
project/backend/api/: urls.py
project/backend/config/: asgi.py  celery.py  wsgi.py
project/backend/config/celery-runners/: celery-runner-for-beat.py  celery-runner-for-worker.py
project/backend/config/settings/: base.py  develop.py  product.py
project/backend/counter/: models.py
project/backend/counter/api/: urls.py
project/backend/counter/migrations/: 0001_initial.py
project/backend/custom_auth/: models.py
project/backend/datasets/: mdc_auto_cmptl.json  medicine_measures_and_names.json  medicine_measures_and_names_second.json
project/backend/health_monitoring/: admin.py
project/backend/medication/: admin.py  models.py  tasks.py  tasks_del.py
project/backend/medication/api/: urls.py  (+2 more)
project/backend/medication_management/: admin.py  apps.py
project/backend/notebooks/: .gitignore  Api-Kullanım.ipynb  Aylık tablo verisi almak deneysel.ipynb  Counter Stats.ipynb  Get ui screenshot.ipynb  Health Monitoring Api.ipynb  MedicationTimeService.ipynb  TemelKullanım.ipynb  Template.ipynb  Untitled.ipynb  api_client.py  ilac_takip_gelistirilmis.xlsx  ilaç kulanım logu.ipynb  ilaç tanıma.ipynb  kullanma-talimatlarını indir.ipynb  trigger_push test.ipynb
project/backend/notification_base/: admin.py  apps.py  models.py
(+257 files in other folders)
